
2.2.2
Change in script: Fixed the setOption method not working for non-lowercase options. 

2.2.3
Change in docs: Updated jQuery to version 1.8.1
Change in script: You can know initialize SudoSlider on an empty container, even if you are not using AJAX. Thanks to clime from github.

2.2.4
Change in docs: Updated jQuery to version 1.8.2
Change in script: Added the getSlide method, see the docs for details. 
Change in script: Fixed ajaxloadfunction and continuous not working well together. 

2.2.5
Change in docs: Changed the "urls" in the history demo to remove any spaces in them. 
Change in script: Fixed that calling some methods when using continuous would bug if slideCount > [number of slides]
Change in docs: Added the keyboard demo, showcasing basic keyboard navigation by using the methods. 
Change in script: Fixed "flickering" of the controls in some very rare cases. 
Change in script: Fixed that the ajaxLoadFunction ran to early. 
Change in script: Added an argument to the insertSlide method, so you now can specify where the slider should be after inserting the slide. 

2.2.6
Change in script: Fixed onCurrentFunc and onUncurrentFunc being fired twice with updatebefore = true and ajax = true. 
Change in docs: Added a videos demo, showcasing how you can have videos that pause when you slide. 
Change in docs: Fixed that the example CSS in the docs didn't reflect the CSS actually used. 
Change in script: It wasn't possible to have extremely small pauses when using auto before. It is now. 
Change in docs: Updated jQuery to version 1.8.3
Change in docs: Updated TouchSwipe to 1.5.0

2.2.7
Change in script: Fixed that continuous crashed the script if initialized on an empty slider. 
Change in docs: Added 3 new demos, fancy stuff 1 + 2 and ticker mode. 
Change in scipt: Potentially fixed an unconfirmed bug in Firefox on OSX where the width was 1px off. 