@@ -259,3 +259,4 @@ Change in docs: Updated TouchSwipe to 1.5.0
 Change in script: Fixed that continuous crashed the script if initialized on an empty slider. 
 Change in docs: Added 3 new demos, fancy stuff 1 + 2 and ticker mode. 
 Change in scipt: Potentially fixed an unconfirmed bug in Firefox on OSX where the width was 1px off. 
+Change in docs: Updated the responsive demo, so it know adjust the number of slides being shown depending on window width.
